fix banner on mobile

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -117,3 +117,10 @@ a.nav-link {
 .mr-left-auto {
   margin-left: auto;
 }
+
+
+@media screen and (max-width: 1280px) {
+  #logo {
+    width: 158px;
+  }
+}
